objects/Traver_Project__c.object
<CustomObject>
    <fields>
        <fullName>Services_Traver__c</fullName>
        <inlineHelpText>Traver Servies</inlineHelpText>
        <label>Services - Traver</label>
        <picklist>
            <picklistValues>
                <fullName>20 Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC Unlimited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development Intelligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Optimization University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Store Visits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MNI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boot Camp Seats</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Show_Ratio__c</fullName>
        <label>Show Ratio</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snapshot_Contact_sent_to_BI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Snapshot Contact sent to BI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Snapshot_Installed__c</fullName>
        <label>Snapshot Installed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Software_Install__c</fullName>
        <label>Software Install</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TTS_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TTS Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_E_Billed_to_Client_PSG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T&amp;E Billed to Client - PSG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_E_Billed_to_Client_Traver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T&amp;E Billed to Client - Traver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_E_Billed_to_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T&amp;E Billed to Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tied_to_DMS_Unhook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tied to DMS Unhook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tied_to_DMS_Upgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tied to DMS Upgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tied_to_New_Software__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tied to New Software</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Days_Contracted_Traver__c</fullName>
        <inlineHelpText>Onsite Days Purchased</inlineHelpText>
        <label>Total Days Contracted - Traver</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Days_Purchased_PSG__c</fullName>
        <label>Total Days Purchased - PSG</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Traver_Initial_Process_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If box is checked initial process tasks and emails will not trigger.</inlineHelpText>
        <label>Traver - Initial Process Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Traver_Inside_Sales_Rep__c</fullName>
        <label>Traver Inside Sales Rep.</label>
        <picklist>
            <picklistValues>
                <fullName>Alayna Dufour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daniel Ardelan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elly Whalen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matthew Aerts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michael LaScola</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Traver_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Traver Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Traver_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Traver__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If box is checked the monthly tasks, emails will not be created each month or the process will stop</inlineHelpText>
        <label>Traver - Monthly Task Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP__c</fullName>
        <formula>Account__r.Key_DOS__r.Manager.FirstName&amp;&quot; &quot;&amp; Account__r.Key_DOS__r.Manager.LastName</formula>
        <label>VP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebComposite_Installed__c</fullName>
        <label>WebComposite Installed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Welcome_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Box Checked when welcome letter Task Completed</inlineHelpText>
        <label>Welcome Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workflow_Trigger_Date__c</fullName>
        <formula>Workflow_Trigger__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Equals Date when Workflow trigger field is populated with date of first Monday of the month.</inlineHelpText>
        <label>Workflow Trigger Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workflow_Trigger__c</fullName>
        <formula>DATE(YEAR(TODAY()), MONTH(TODAY()),
  CASE(MOD(DATE(YEAR(TODAY()),MONTH(TODAY()),1) - DATE(1900, 1, 7), 7),
    0, 2,
    1, 1,
    2, 7,
    3, 6,
    4, 5,
    5, 4,
    6, 3,
  0)
)</formula>
        <label>Workflow Trigger</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X180__c</fullName>
        <defaultValue>false</defaultValue>
        <label>180</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X20_Group_Enrollment__c</fullName>
        <label>20 Group Enrollment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>of_Days_Used_PSG__c</fullName>
        <description>IF( ISNULL(Total_Days_Purchased_PSG__c), 0, NULLVALUE(Onsite_Days_Used_PSG__c, 0) + NULLVALUE(Onsite_Days_Forfeited_PSG__c, 0) / Total_Days_Purchased_PSG__c )</description>
        <formula>IF( ISNULL(Total_Days_Purchased_PSG__c), 0, (NULLVALUE(Onsite_Days_Used_PSG__c,0) + NULLVALUE(Onsite_Days_Forfeited_PSG__c,0))/Total_Days_Purchased_PSG__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Days Used - PSG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_Days_Used_Traver__c</fullName>
        <formula>IF( ISNULL( Total_Days_Contracted_Traver__c ), 0, (NULLVALUE( Onsite_Days_Used_Traver__c,0) + NULLVALUE(Onsite_Days_Forfeited_Traver__c,0))/Total_Days_Contracted_Traver__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total days purchased minus total days logged as completed.    Will only adjust if days are logged. % of Days Used</inlineHelpText>
        <label>% of Days Used - Traver</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_Pep__c</fullName>
        <label># of Courses in PEP</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Users_on_PEP__c</fullName>
        <label>% of Users on PEP</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pf_Appt_to_RO_s__c</fullName>
        <label>% pf Appt. to RO&apos;s</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Consulting Project</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Contract_Type_Traver__c</columns>
        <columns>Services_Traver__c</columns>
        <columns>Notes__c</columns>
        <columns>Lets_Get_Started__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>ALL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Active_Projects</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Contract_Type_Traver__c</columns>
        <columns>Services_Traver__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>My Active Projects</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Consulting# {00000}</displayFormat>
        <label>Consulting Project ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consulting Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>